# prepayment

./: .gitignore  10y_yahoo_quarter_avg.csv  README.md  pyproject.toml
src/prepayment/: datasets.py  factors.py  features.py  plots.py  replicate.py
tests/: test_data_new_schema.py  test_factor_model_synthetic.py  test_prepayment_flags.py  test_quarter_parsing.py  test_rates_loader.py
